[gd_scene load_steps=10 format=3 uid="uid://bebvc2datqp85"]

[ext_resource type="Script" uid="uid://fidys4f757e6" path="res://ui/menus/menu_overlay_config.gd" id="1_biga6"]
[ext_resource type="PackedScene" uid="uid://m4rgiakfy3m2" path="res://ui/menus/menu_frame.tscn" id="1_qowy2"]
[ext_resource type="PackedScene" uid="uid://dsgvm3dda1kjp" path="res://ui/header.tscn" id="3_40ori"]
[ext_resource type="PackedScene" uid="uid://bgsxagi62acni" path="res://ui/settings/setting_options.tscn" id="3_q4g74"]
[ext_resource type="PackedScene" uid="uid://bevoopcdq5dsh" path="res://ui/settings/setting_vec2i.tscn" id="4_s6r0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qowy2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.12549, 0.156863, 0.188235, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0j0w0"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.12549, 0.156863, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w705f"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 0.12549, 0.25098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypwpy"]

[node name="MenuFrame" instance=ExtResource("1_qowy2")]
theme_override_styles/panel = SubResource("StyleBoxFlat_qowy2")
script = ExtResource("1_biga6")
show_close_button = true

[node name="ButtonClose" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
theme_override_styles/panel = SubResource("StyleBoxFlat_0j0w0")

[node name="ButtonExit" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" index="2"]
theme_override_styles/panel = SubResource("StyleBoxFlat_w705f")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer" index="0"]
layout_mode = 2

[node name="Header" parent="VBoxContainer/ScrollContainer/ContentContainer/VBoxContainer" index="0" instance=ExtResource("3_40ori")]
layout_mode = 2
theme_type_variation = &""
text = "Position / Size"

[node name="Setting_Anchor" parent="VBoxContainer/ScrollContainer/ContentContainer/VBoxContainer" index="1" instance=ExtResource("3_q4g74")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ypwpy")
items = PackedStringArray("Top Left", "Top Right", "Bottom Left", "Bottom Right", "Center Left", "Center Top", "Center Right", "Center Bottom", "Center")
value = 0
setting_name = "Anchor"
setting_name_min_width = 50

[node name="Setting_Position" parent="VBoxContainer/ScrollContainer/ContentContainer/VBoxContainer" index="2" instance=ExtResource("4_s6r0s")]
unique_name_in_owner = true
layout_mode = 2
min_value = Vector2i(-3000, -3000)
max_value = Vector2i(3000, 3000)
show_updown_arrows = true
prefix_min_width = 10
setting_name = "Position"
setting_name_min_width = 50

[node name="Setting_Size" parent="VBoxContainer/ScrollContainer/ContentContainer/VBoxContainer" index="3" instance=ExtResource("4_s6r0s")]
unique_name_in_owner = true
layout_mode = 2
min_value = Vector2i(-3000, -3000)
max_value = Vector2i(3000, 3000)
show_updown_arrows = true
prefix_x = "w"
prefix_y = "h"
prefix_min_width = 10
setting_name = "Size"
setting_name_min_width = 50

[node name="Header2" parent="VBoxContainer/ScrollContainer/ContentContainer/VBoxContainer" index="4" instance=ExtResource("3_40ori")]
layout_mode = 2
theme_type_variation = &""
text = "Parameters"

[node name="ParamContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentContainer/VBoxContainer" index="5"]
unique_name_in_owner = true
layout_mode = 2
